Replace placeholder image with Midjourney icon

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
                         <!-- Lazy Load Image is Critical -->
-                        <img src="https://via.placeholder.com/48" alt="Tool Icon" class="w-12 h-12 rounded-lg mr-3 object-cover" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Midjourney_Emblem.png" alt="Midjourney Icon" class="w-12 h-12 rounded-lg mr-3 object-contain bg-gray-100">
                         <div>
                             <h4 class="font-bold text-lg">Midjourney</h4>
                             <span class="text-xs bg-purple-100 text-purple-700 px-2 py-0.5 rounded">Paid</span>
