--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Discover the best AI tools to scale your <strong>Social Media & Brand Growth</strong>.
         </p>
         <div class="max-w-xl mx-auto relative mb-8">
-            <input type="text" placeholder="Search for 'video generator' or 'chatgpt'..." class="w-full p-4 pl-6 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 transition">
+            <input type="text" placeholder="Search for 'sora' or 'chatgpt'..." class="w-full p-4 pl-6 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 transition">
             <button class="absolute right-2 top-2 bg-indigo-600 text-white px-6 py-2 rounded-full hover:bg-indigo-700 transition font-medium">Search</button>
         </div>
         <div class="flex flex-wrap justify-center gap-3">
@@ -58,100 +58,86 @@
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             
-            <!-- Jasper AI -->
+            <!-- 1. Jasper -->
             <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full">
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
                         <img src="https://ui-avatars.com/api/?name=Jasper+AI&background=7C3AED&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
-                        <div>
-                            <h3 class="font-bold text-lg">Jasper AI</h3>
-                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-purple-100 text-purple-700 px-2 py-0.5 rounded font-medium">Paid</span></div>
-                        </div>
+                        <div><h3 class="font-bold text-lg">Jasper AI</h3><div class="flex gap-2 mt-1"><span class="text-[10px] bg-purple-100 text-purple-700 px-2 py-0.5 rounded font-medium">Paid</span></div></div>
                     </div>
                     <span class="text-yellow-400 font-bold text-sm">★ 4.8</span>
                 </div>
                 <p class="text-gray-600 text-sm mb-6 flex-grow">Advanced AI writing assistant designed for marketing copy, blog posts, and social media content.</p>
-                <a href="tool/jasper-ai.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Details & Alternatives</a>
+                <a href="tool/jasper-ai.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Details</a>
             </article>
 
-            <!-- ChatGPT -->
+            <!-- 2. ChatGPT (NEW: Linked!) -->
             <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full">
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
                         <img src="https://ui-avatars.com/api/?name=ChatGPT&background=10a37f&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
-                        <div>
-                            <h3 class="font-bold text-lg">ChatGPT</h3>
-                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded font-medium">Freemium</span></div>
-                        </div>
+                        <div><h3 class="font-bold text-lg">ChatGPT</h3><div class="flex gap-2 mt-1"><span class="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded font-medium">Freemium</span></div></div>
                     </div>
                     <span class="text-yellow-400 font-bold text-sm">★ 4.9</span>
                 </div>
                 <p class="text-gray-600 text-sm mb-6 flex-grow">The industry standard for conversational AI. Great for brainstorming, coding, and general tasks.</p>
-                <a href="#" class="block w-full text-center border border-gray-200 text-gray-600 py-2.5 rounded-lg hover:bg-gray-50 transition font-medium">Review Coming Soon</a>
+                <a href="tool/chatgpt.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Review</a>
             </article>
 
-            <!-- Midjourney (已链接！) -->
+            <!-- 3. Midjourney -->
             <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full">
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
                         <img src="https://ui-avatars.com/api/?name=Midjourney&background=000&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
-                        <div>
-                            <h3 class="font-bold text-lg">Midjourney</h3>
-                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-purple-100 text-purple-700 px-2 py-0.5 rounded font-medium">Paid</span></div>
-                        </div>
+                        <div><h3 class="font-bold text-lg">Midjourney</h3><div class="flex gap-2 mt-1"><span class="text-[10px] bg-purple-100 text-purple-700 px-2 py-0.5 rounded font-medium">Paid</span></div></div>
                     </div>
                     <span class="text-yellow-400 font-bold text-sm">★ 4.9</span>
                 </div>
                 <p class="text-gray-600 text-sm mb-6 flex-grow">Create stunning, high-fidelity AI art via Discord. Best for artistic visuals.</p>
-                <a href="tool/midjourney.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Review & Prompts</a>
+                <a href="tool/midjourney.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Prompts</a>
             </article>
 
-            <!-- Runway (已链接！) -->
+            <!-- 4. Runway -->
             <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full">
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
                         <img src="https://ui-avatars.com/api/?name=Runway&background=2563eb&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
-                        <div>
-                            <h3 class="font-bold text-lg">Runway Gen-2</h3>
-                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-purple-100 text-purple-700 px-2 py-0.5 rounded font-medium">Paid</span></div>
-                        </div>
+                        <div><h3 class="font-bold text-lg">Runway Gen-2</h3><div class="flex gap-2 mt-1"><span class="text-[10px] bg-purple-100 text-purple-700 px-2 py-0.5 rounded font-medium">Paid</span></div></div>
                     </div>
                     <span class="text-yellow-400 font-bold text-sm">★ 4.7</span>
                 </div>
                 <p class="text-gray-600 text-sm mb-6 flex-grow">Turn text into realistic videos instantly. The leading AI video generation platform.</p>
-                <a href="tool/runway-ml.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Details & Alternatives</a>
+                <a href="tool/runway-ml.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Details</a>
             </article>
 
-            <!-- ElevenLabs (已链接！) -->
+            <!-- 5. ElevenLabs -->
             <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full">
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
                         <img src="https://ui-avatars.com/api/?name=ElevenLabs&background=1f2937&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
-                        <div>
-                            <h3 class="font-bold text-lg">ElevenLabs</h3>
-                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded font-medium">Freemium</span></div>
-                        </div>
+                        <div><h3 class="font-bold text-lg">ElevenLabs</h3><div class="flex gap-2 mt-1"><span class="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded font-medium">Freemium</span></div></div>
                     </div>
                     <span class="text-yellow-400 font-bold text-sm">★ 4.8</span>
                 </div>
                 <p class="text-gray-600 text-sm mb-6 flex-grow">The most realistic AI voice generator. Perfect for video narration and podcasts.</p>
-                <a href="tool/elevenlabs.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Review & Samples</a>
+                <a href="tool/elevenlabs.html" class="block w-full text-center bg-indigo-50 text-indigo-700 py-2.5 rounded-lg hover:bg-indigo-100 transition font-medium border border-indigo-100">View Samples</a>
             </article>
 
-            <!-- Stable Diffusion -->
-            <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full">
+            <!-- 6. Sora (NEW! Replaced Stable Diffusion) -->
+            <article class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition border border-gray-100 flex flex-col h-full border-indigo-100 ring-2 ring-indigo-50">
                 <div class="flex items-start justify-between mb-4">
                     <div class="flex items-center">
-                        <img src="https://ui-avatars.com/api/?name=Stable+Diff&background=f59e0b&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
+                        <img src="https://ui-avatars.com/api/?name=Sora&background=000&color=fff&size=64" alt="Icon" class="w-12 h-12 rounded-lg mr-3 shadow-sm">
                         <div>
-                            <h3 class="font-bold text-lg">Stable Diffusion</h3>
-                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded font-medium">Free</span></div>
+                            <h3 class="font-bold text-lg">OpenAI Sora</h3>
+                            <!-- 加上 "Waitlist" 标签，非常吸睛 -->
+                            <div class="flex gap-2 mt-1"><span class="text-[10px] bg-red-100 text-red-600 px-2 py-0.5 rounded font-medium">Waitlist</span></div>
                         </div>
                     </div>
-                    <span class="text-yellow-400 font-bold text-sm">★ 4.6</span>
+                    <span class="text-yellow-400 font-bold text-sm">★ 5.0</span>
                 </div>
-                <p class="text-gray-600 text-sm mb-6 flex-grow">Free and open-source AI image generator that you can run locally on your own PC.</p>
-                <a href="#" class="block w-full text-center border border-gray-200 text-gray-600 py-2.5 rounded-lg hover:bg-gray-50 transition font-medium">Review Coming Soon</a>
+                <p class="text-gray-600 text-sm mb-6 flex-grow">The most anticipated AI video model. Create 60s realistic videos. Check release date info.</p>
+                <a href="tool/sora.html" class="block w-full text-center bg-indigo-600 text-white py-2.5 rounded-lg hover:bg-indigo-700 transition font-medium shadow-md">Check Availability</a>
             </article>
 
         </div>
