--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
             <input type="text" placeholder="Search for 'sora' or 'chatgpt'..." class="w-full p-4 pl-6 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 transition">
             <button class="absolute right-2 top-2 bg-indigo-600 text-white px-6 py-2 rounded-full hover:bg-indigo-700 transition font-medium">Search</button>
         </div>
-        <div class="flex flex-wrap justify-center gap-3">
-            <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">🎥 AI Video</span>
-            <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">✍️ Copywriting</span>
-            <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">🎨 Image Gen</span>
-            <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">🤖 Chatbots</span>
-        </div>
+        <!-- 快速分类标签 -->
+<div class="flex flex-wrap justify-center gap-3">
+    <!-- 新增的红色高亮按钮 -->
+    <a href="tool/wechat-marketing.html" class="px-4 py-1.5 bg-red-50 border border-red-200 rounded-full text-sm text-red-600 font-bold cursor-pointer hover:bg-red-100 transition">🚀 WeChat Growth</a>
+    
+    <!-- 原来的按钮 -->
+    <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">🎥 AI Video</span>
+    <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">✍️ Copywriting</span>
+    <span class="px-4 py-1.5 bg-gray-50 border border-gray-200 rounded-full text-sm text-gray-600 cursor-pointer hover:border-indigo-500 hover:text-indigo-600 transition">🎨 Image Gen</span>
+</div>
     </header>
 
     <!-- Tools Grid -->
