--- a/tool/wechat-marketing.html
+++ b/tool/wechat-marketing.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best AI Tools for WeChat Official Accounts (2024 Growth Guide)</title>
     <meta name="description" content="How to grow your WeChat Official Account using AI. Best tools for writing articles, generating cover images, and creating video content for WeChat Channels.">
-    <script src="https://cdn.tailwindcss.com"></script>
     
-    <!-- Schema: Article (因为这是篇攻略性质的页面) -->
+    <!-- 1. Google Analytics (注册后把代码贴在下面) -->
+    <!-- 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script> 
+    -->
+
+    <script src="https://cdn.tailwindcss.com"></script>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -141,8 +151,32 @@
 
     </main>
 
-    <footer class="bg-gray-900 text-gray-400 py-8 border-t border-gray-800 mt-auto text-center">
-        <p>&copy; 2024 WeChatMedia.com. All rights reserved.</p>
+    <!-- Professional Footer (Updated) -->
+    <footer class="bg-gray-900 text-gray-400 py-12 border-t border-gray-800 mt-auto">
+        <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div>
+                <span class="text-xl font-bold text-white block mb-4">WeChatMedia</span>
+                <p class="text-sm leading-relaxed">
+                    The #1 AI Tools Directory for Social Media Marketers & Content Creators. 
+                    Focusing on WeChat, TikTok, and YouTube growth.
+                </p>
+            </div>
+            <div>
+                <h4 class="text-white font-bold mb-4">Quick Links</h4>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="/" class="hover:text-white transition">All Tools</a></li>
+                    <li><a href="/tool/wechat-marketing.html" class="hover:text-white transition text-indigo-400">WeChat Growth Guide</a></li>
+                    <li><a href="/sitemap.xml" class="hover:text-white transition">Sitemap</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="text-white font-bold mb-4">Disclosure</h4>
+                <p class="text-xs leading-relaxed text-gray-500">
+                    WeChatMedia.com is reader-supported. When you buy through links on our site, we may earn an affiliate commission at no extra cost to you.
+                </p>
+                <p class="text-xs mt-4">&copy; 2025 WeChatMedia.com</p>
+            </div>
+        </div>
     </footer>
 
 </body>
