--- a/index.html
+++ b/index.html
@@ -164,9 +164,21 @@
                 </article>
             </div>
         </div>
-
+    <!-- 在 main 结束标签 </main> 之前加入这个 -->
+<div class="mt-20 border-t border-gray-100 pt-10">
+    <h3 class="text-xl font-bold mb-6">Latest Guides</h3>
+    <ul class="space-y-4">
+        <li>
+            <a href="/blog/deepseek-vs-chatgpt.html" class="text-indigo-600 hover:underline font-medium block">
+                DeepSeek vs ChatGPT: Which is better for Chinese Social Media?
+            </a>
+            <p class="text-sm text-gray-500">Comparing the two giants for WeChat content creation.</p>
+        </li>
+        <!-- 以后写了新文章，就在这里加一行 -->
+    </ul>
+</div>
     </main>
-
+    
     <!-- Professional Footer -->
     <footer class="bg-gray-900 text-gray-400 py-12 border-t border-gray-800 mt-auto">
         <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
