--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
             </a>
             <p class="text-sm text-gray-500">Comparing the two giants for WeChat content creation.</p>
         </li>
+        <!-- Article 2: GPT-5 News -->
+<a href="blog/gpt-5-release-date.html" class="block group bg-gray-50 p-8 rounded-2xl hover:bg-indigo-50 transition border border-gray-100 hover:border-indigo-100">
+    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+        <div>
+            <span class="text-xs font-bold text-red-600 bg-red-100 px-3 py-1 rounded-full mb-3 inline-block">News</span>
+            <h3 class="text-xl font-bold text-gray-900 group-hover:text-indigo-600 transition">GPT-5.2 Release Date Rumors: Is it Delayed?</h3>
+            <p class="text-gray-600 mt-2">Why OpenAI might be pushing back the launch and what it means for creators.</p>
+        </div>
+        <span class="text-indigo-600 font-bold whitespace-nowrap">Read Update &rarr;</span>
+    </div>
+</a>
         <!-- 以后写了新文章，就在这里加一行 -->
     </ul>
 </div>
