--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
     </div>
 </a>
         <!-- 以后写了新文章，就在这里加一行 -->
+        <!-- Article 4: Style Transfer Guide -->
+<a href="blog/how-to-extract-image-style.html" class="block group bg-gray-50 p-8 rounded-2xl hover:bg-indigo-50 transition border border-gray-100 hover:border-indigo-100 mt-4">
+    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+        <div>
+            <span class="text-xs font-bold text-pink-600 bg-pink-100 px-3 py-1 rounded-full mb-3 inline-block">Tutorial</span>
+            <h3 class="text-xl font-bold text-gray-900 group-hover:text-indigo-600 transition">How to "Steal" Any Image Style with AI</h3>
+            <p class="text-gray-600 mt-2">Stop guessing prompts. Use Midjourney's --sref to copy styles instantly.</p>
+        </div>
+        <span class="text-indigo-600 font-bold whitespace-nowrap">Read Guide &rarr;</span>
+    </div>
+</a>
     </ul>
 </div>
     </main>
