--- a/tool/chatgpt.html
+++ b/tool/chatgpt.html
@@ -82,8 +82,39 @@
         </div>
     </main>
 
-    <footer class="bg-gray-900 text-gray-400 py-8 border-t border-gray-800 mt-auto text-center">
-        <p>&copy; 2024 WeChatMedia.com. All rights reserved.</p>
-    </footer>
+    <footer class="bg-gray-900 text-gray-400 py-12 border-t border-gray-800 mt-auto">
+    <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
+        <div>
+            <span class="text-xl font-bold text-white block mb-4">WeChatMedia</span>
+            <p class="text-sm leading-relaxed">
+                The unofficial AI arsenal for social media growth. <br>
+                Focusing on Channels, Official Accounts, and RedNote.
+            </p>
+        </div>
+        <div>
+            <h4 class="text-white font-bold mb-4">Tools</h4>
+            <ul class="space-y-2 text-sm">
+                <li><a href="/tool/kling.html" class="hover:text-white transition">Video Generators</a></li>
+                <li><a href="/tool/chatgpt.html" class="hover:text-white transition">Writing Assistants</a></li>
+            </ul>
+        </div>
+        <div>
+            <h4 class="text-white font-bold mb-4">Legal</h4>
+            <p class="text-xs leading-relaxed text-gray-500">
+                WeChatMedia.com is reader-supported. We may earn an affiliate commission at no extra cost to you.
+            </p>
+        </div>
+    </div>
+    
+    <!-- 强制免责声明 (Risk Control) -->
+    <div class="border-t border-gray-800 pt-8 text-center px-4">
+        <p class="text-xs text-gray-600 max-w-3xl mx-auto leading-relaxed">
+            <strong>Disclaimer:</strong> WeChatMedia.com is an independent educational resource for content creators. 
+            We are <strong>NOT</strong> affiliated, associated, authorized, endorsed by, or in any way officially connected with Tencent Holdings Ltd., WeChat (Weixin), or any of their subsidiaries or its affiliates. 
+            The official WeChat website can be found at wechat.com. All product and company names are trademarks™ or registered® trademarks of their respective holders. Use of them does not imply any affiliation with or endorsement by them.
+        </p>
+        <p class="text-xs text-gray-700 mt-4">&copy; 2025 WeChatMedia.com</p>
+    </div>
+</footer>
 </body>
 </html>
