Update purchase link to Gumroad

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                         <span class="text-3xl font-extrabold text-gray-900">$9.90</span>
                         <span class="text-sm text-gray-500 line-through mb-2">$29.00</span>
                         <!-- 这里的 href 换成你的 Gumroad 或 Stripe 链接 -->
-                        <a href="#" class="bg-indigo-600 text-white w-full py-3 rounded-lg font-bold text-center hover:bg-indigo-700 transition shadow-md">
-                            Get Instant Access
-                        </a>
+                        <!-- Gumroad 购买按钮 -->
+<a href="https://daseanlee.gumroad.com/l/tidjd" target="_blank" class="bg-indigo-600 text-white w-full py-3 rounded-lg font-bold text-center hover:bg-indigo-700 transition shadow-md block">
+    Get Instant Access
+</a>
                         <p class="text-xs text-gray-400 mt-2">Instant PDF Download</p>
                     </div>
                 </div>
