--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO 优化：强调 WeChat Marketing & Growth -->
     <title>WeChatMedia | Best AI Tools for WeChat Marketing & Growth</title>
+    <!-- 告诉 Google：不管你是通过 index.html 还是其他方式进来的，这个 URL 才是正宫 -->
+<link rel="canonical" href="https://www.wechatmedia.com/" />
     <meta name="description" content="The unofficial AI arsenal for WeChat growth. Discover tools for Channels video generation, Official Account writing, and viral cover design.">
     <!-- GA Code Placeholder -->
     <script src="https://cdn.tailwindcss.com"></script>
