--- a/tool/deepseek.html
+++ b/tool/deepseek.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepSeek Review: Best Free Coding & Chinese AI?</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/deepseek.html" />
     <meta name="description" content="DeepSeek Coder and Chat review. Why this open-source model is becoming a favorite for developers and Chinese users.">
     <!-- 1. GA Code Here -->
     <script src="https://cdn.tailwindcss.com"></script>
