--- a/tool/wechat-marketing.html
+++ b/tool/wechat-marketing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best AI Tools for WeChat Official Accounts (2026 Growth Guide)</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/wechat-marketing.html" />
     <meta name="description" content="How to grow your WeChat Official Account using AI. Best tools for writing articles, generating cover images, and creating video content for WeChat Channels.">
     
     <!-- 1. Google Analytics (注册后把代码贴在下面) -->
