--- a/tool/chatgpt.html
+++ b/tool/chatgpt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatGPT Review: Is GPT-4 Worth Paying For?</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/chatgpt.html" />
     <meta name="description" content="Detailed review of ChatGPT for content creators. GPT-3.5 vs GPT-4, pricing, plugins, and how to use it for social media marketing.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="application/ld+json">
