--- a/tool/kling.html
+++ b/tool/kling.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kling AI Review: The "Sora Killer" from Kuaishou</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/kling.html" />
     <meta name="description" content="Review of Kling AI (可灵). How to use this Chinese text-to-video model to generate 1080p videos up to 2 minutes long.">
     <!-- 1. GA Code Here -->
     <script src="https://cdn.tailwindcss.com"></script>
