--- a/tool/heygen.html
+++ b/tool/heygen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HeyGen Review: Best AI Video Avatar Generator?</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/heygen.html" />
     <meta name="description" content="Create professional AI avatar videos with HeyGen. Perfect for marketing, translation, and faceless YouTube channels.">
     <!-- 1. GA Code Here -->
     <script src="https://cdn.tailwindcss.com"></script>
