--- a/tool/sora.html
+++ b/tool/sora.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenAI Sora Review: Release Date, Features & Best Alternatives</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/sora.html" />
     <meta name="description" content="When is OpenAI Sora releasing? Full review of the text-to-video model. Features, examples, and the best Sora alternatives you can use right now.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="application/ld+json">
