--- a/tool/runway-ml.html
+++ b/tool/runway-ml.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runway Gen-2 Review: Best AI Video Generator? (Free Alternatives)</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/runway-ml.html" />
     <meta name="description" content="Is Runway Gen-2 worth it? In-depth review of this text-to-video AI tool. Pricing, features, and free alternatives like Pika and Sora.">
     
     <!-- Tailwind CSS -->
