--- a/tool/midjourney.html
+++ b/tool/midjourney.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midjourney Review & Prompts: Is it the Best AI Art Generator?</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/midjourney.html" />
     <meta name="description" content="In-depth review of Midjourney v6. How to use it for social media posters, pricing, and free alternatives like Stable Diffusion.">
     
     <script src="https://cdn.tailwindcss.com"></script>
