--- a/tool/luma.html
+++ b/tool/luma.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luma Dream Machine Review: Free AI Video Generator</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/luma.html" />
     <meta name="description" content="Create high-quality AI videos for free with Luma Dream Machine. Features, pricing, and comparison with Runway Gen-3.">
     <!-- 1. GA Code Here -->
     <script src="https://cdn.tailwindcss.com"></script>
