--- a/tool/qwen.html
+++ b/tool/qwen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qwen (Tongyi Qianwen) Review: Best Long-Context AI</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/qwen.html" />
     <meta name="description" content="Review of Alibaba's Qwen model. Why it is the best AI for analyzing long documents and writing long-form Chinese articles.">
     <!-- 1. GA Code Here -->
     <script src="https://cdn.tailwindcss.com"></script>
