--- a/tool/grok.html
+++ b/tool/grok.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grok AI Review: Elon Musk's Real-time AI</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/grok.html" />
     <meta name="description" content="Review of xAI's Grok. How it uses real-time X (Twitter) data to stay updated on news and trends.">
     <!-- 1. GA Code Here -->
     <script src="https://cdn.tailwindcss.com"></script>
