--- a/tool/jasper-ai.html
+++ b/tool/jasper-ai.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jasper AI Review 2024: Is it Worth $39? (Free Alternatives)</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/jasper-ai.html" />
     <meta name="description" content="In-depth review of Jasper AI. Features, pricing, pros & cons, and the best free alternatives for content creators in 2024.">
     
     <!-- Tailwind CSS -->
