--- a/tool/elevenlabs.html
+++ b/tool/elevenlabs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElevenLabs Review: Most Realistic AI Voice Generator?</title>
+    <link rel="canonical" href="https://www.wechatmedia.com/tool/elevenlabs.html" />
     <meta name="description" content="Review of ElevenLabs Prime Voice AI. Perfect for video narration, audiobooks, and podcasts. Listen to samples and see free alternatives.">
     
     <script src="https://cdn.tailwindcss.com"></script>
